// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders closed by default 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
      data-testid="tooltip-trigger"
    >
      Trigger
    </div>
  </div>
</div>
`;

exports[`Tooltip renders initially opened 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-describedby="tooltip-id"
      class=""
      data-testid="tooltip-trigger"
    >
      Trigger
    </div>
    <div
      class="MuiTooltip-popper PicassoTooltip-arrowPopper"
      id="tooltip-id"
      role="tooltip"
      style="position: absolute;"
      x-placement="top"
    >
      <div
        class="MuiTooltip-tooltip PicassoTooltip-tooltip MuiTooltip-tooltipPlacementTop"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          data-testid="tooltip-content"
        >
          Content
        </div>
        <span
          class="PicassoTooltip-arrow"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tooltip renders with portals disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      aria-describedby="tooltip-id"
      class=""
      data-testid="tooltip-trigger"
    >
      Trigger
    </div>
    <div
      class="MuiTooltip-popper PicassoTooltip-arrowPopper"
      id="tooltip-id"
      role="tooltip"
      style="position: absolute;"
      x-placement="top"
    >
      <div
        class="MuiTooltip-tooltip PicassoTooltip-tooltip MuiTooltip-tooltipPlacementTop"
        style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <div
          data-testid="tooltip-content"
        >
          Content
        </div>
        <span
          class="PicassoTooltip-arrow"
        />
      </div>
    </div>
  </div>
</div>
`;
